<resources>
    <string name="app_name">Chemical Guessing Game</string>
    <string name="add_chemical">Add Chemical</string>
    <string name="guess">Guess</string>
    <string name="type_a_new_chemical_name_to_add">Type a new chemical name to add</string>
    <string name="type_here">Type here</string>
    <string name="enter_a_chemical_name_or_guess">Enter a chemical name or guess:</string>
    <string name="correct_guess">Congratulations! You guessed it right.\nIt was %1$s.</string>
    <string name="incorrect_guess">Sorry, wrong guess. The correct answer was %1$s</string>
    <string name="empty_chemical">Chemical can not be empty</string>
    <string name="add_chemical_fail">Chemical \'%1$s\' is already available</string>
    <string name="add_chemical_success">Chemical \'%1$s\' added successfully</string>
    <string name="chemical_image">chemical image</string>
</resources>