<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/guessInputText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/type_here"
            android:autofillHints="" />

        <Button
            android:id="@+id/guessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess" />

        <EditText
            android:id="@+id/addChemicalInputText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/type_a_new_chemical_name_to_add"
            android:autofillHints="" />

        <Button
            android:id="@+id/addChemicalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_chemical" />

        <ImageView
            android:src="@drawable/chemical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/chemical_image" />

    </LinearLayout>

</layout>